--- a/lab_022.html
+++ b/lab_022.html
@@ -51,7 +51,7 @@
           Add a <code class="language-html">&lt;ul&gt;</code> to your personal website
         </li>
         <li>
-          Add an <code class="language-html">&lt;image&gt;</code> to your personal website
+          Add an <code class="language-html">&lt;img&gt;</code> to your personal website
         </li>
       </ul>
       <h2>Connect with Links</h2>
@@ -74,7 +74,18 @@
         would see on other websites. If you experiment with changing your <code>href="index.html"</code> to your other
         HTML pages, you can click and move to that page.</p>
       <p>Once you're done experimenting, change it back to <code>href="index.html"</code>!</p>
-
+      <img class="image" src="assets/2201.png"
+        alt="Website index.html with logo text that is blue and underlined, a link">
+      <h2>Lists</h2>
+      <p>There are two types of lists we will focus on. Ordered lists and unordered lists. Both lists hold list
+        items,but ordered lists precede each item with a incrementing numbers while unordered lists usually use bullet
+        points.</p>
+      <p>Both lists have the same structure with <code class="language-html">&lt;ol&gt;</code> tags representing an
+        ordered list and <code class="language-html">&lt;ul&gt;</code> tags representing and unordered list.</p>
+      <h3 class="file-heading"><em>lists</em></h3>
+      <pre class="file line-numbers" data-range="10,27" data-src="prism/html/2202.html"></pre>
+      <h3 class="file-heading"><em>lists</em></h3>
+     <iframe class="iframe file" src="prism/html/2202.html"></iframe> 
 
 
 
