feat: more labs

--- a/lab_019.html
+++ b/lab_019.html
@@ -101,8 +101,15 @@
           class="language-html">&lt;h3&gt;</code> should be a sub-heading of <code
           class="language-html">&lt;h2&gt;</code> and <code class="language-html">&lt;h6&gt;</code> should be the
         sub-heading of <code class="language-html">&lt;h5&gt;</code> and so on.</p>
-      <h3 class="file-heading"><em>headings</em></h3>
-      <iframe class="iframe file" src="prism/html/1903.html"></iframe>
+      <h3 class="file-heading"><em>headings.html</em></h3>
+      <div class="side-by-side-container">
+        <div class="side-by-side-child">
+          <pre class="file line-numbers" data-src="prism/html/1903.html"></pre>
+        </div>
+        <div class="side-by-side-child">
+          <iframe class="iframe-full file" src="prism/html/1903.html"></iframe>
+        </div>
+      </div>
 
     </div>
   </main>
