--- a/lab_021.html
+++ b/lab_021.html
@@ -61,7 +61,7 @@
         <li>Give all your <code class="language-html">&lt;nav&gt;</code> tags, the <code>class="navbar"</code>
           attribute.
         </li>
-         <li>Give all your <code class="language-html">&lt;footer&gt;</code> tags, the <code>class="footer"</code>
+        <li>Give all your <code class="language-html">&lt;footer&gt;</code> tags, the <code>class="footer"</code>
           attribute.
         </li>
       </ul>
@@ -110,6 +110,8 @@
           class="language-html">&lt;nav&gt;</code>, <code class="language-html">&lt;body&gt;</code>, <code
           class="language-html">&lt;main&gt;</code>, <code class="language-html">&lt;footer&gt;</code>, and <code
           class="language-html">&lt;h1&gt;</code> headings.</p>
+      <p class="note"><strong>Note:</strong> Stage and commit often! Split up any large changes into logical, small stages and commits.</p>
+
 
     </div>
   </main>
