feat: add more labs

--- a/lab_021.html
+++ b/lab_021.html
@@ -90,9 +90,9 @@
           give them one of the following: "Education", "Experience", "Skills", "Projects", "Coursework", "Activities",
           "Awards", "Interests", "References"
         </li>
-        <p class="note"><strong>Note:</strong> It's recommended you have "Education", but we will be going with
-          "Experience", "Skills", "Projects", and "Coursework" as well. If you want to have all of them, simply add more
-          of the <code class="language-html">&lt;section&gt;</code>, heading, and all!</p>
+        <p class="note"><strong>Note:</strong> It's recommended you have "Education",
+          "Experience", "Skills", "Projects", and "Coursework". If you want to have other categories of your resume,
+          simply add more of the <code class="language-html">&lt;section&gt;</code>, heading, and all!</p>
       </ul>
       <h2>Update Your Portfolio</h2>
       <p>Projects are a great way to show that you've worked through something practical or built something cool. You
@@ -110,7 +110,8 @@
           class="language-html">&lt;nav&gt;</code>, <code class="language-html">&lt;body&gt;</code>, <code
           class="language-html">&lt;main&gt;</code>, <code class="language-html">&lt;footer&gt;</code>, and <code
           class="language-html">&lt;h1&gt;</code> headings.</p>
-      <p class="note"><strong>Note:</strong> Stage and commit often! Split up any large changes into logical, small stages and commits.</p>
+      <p class="note"><strong>Note:</strong> Stage and commit! Try to split up any large changes into logical, small
+        stages and commits.</p>
 
 
     </div>
