--- a/lab_022.html
+++ b/lab_022.html
@@ -110,22 +110,26 @@
       </video>
       <h2>Images</h2>
       <p>All this text we have doesn't really showcase the multimedia nature of the internet. Let's add an image to our
-        <code>index.html</code> so that the world can percieve us! In your <code>index.html</code>, add the following in
+        <code>index.html</code> so that the world can percieve us! In your <code>index.html</code>, add the following to
         your <code class="language-html">&lt;div class="about-image"&gt;</code> tag.
       </p>
-      <pre><code class="language-html">&lt;img src="&lt;path/to/image&gt;" alt="&lt;description of image&gt;"&gt;</code>
-      </pre>
+      <pre><code class="language-html">&lt;img src="&lt;path/to/image&gt;" alt="&lt;description of image&gt;"&gt;</code></pre>
+      <p class="note"><strong>Note:</strong> Image is a self-closing tag like <code
+          class="language-html">&lt;br&gt;</code> so you just need an one tag.</p>
       <p>Make sure to put an image in the same directory as all your HTML and other files! We have an image
-        <code>sky.jpg</code>
-        which we will add to our page.
+        <code>sky.jpg</code> which we will add to our page.
       </p>
       <pre><code class="language-html">&lt;img src="sky.jpg" alt="A video of an image of the sky and clouds being too big"&gt;</code></pre>
       <video class="video" controls>
         <source src="assets/2202.mp4" type="video/mp4">
       </video>
-      <p>The image is <em>way</em> too big. For now let's put a width and height on our image using the
-        <code>width</code> and <code>height</code> attributes to keep the image smaller.
+      <p>Our image is <em>way</em> too big, but we can change it to fit better once we learn CSS. For now let's put a
+        width and height on our image using the <code>width</code> and <code>height</code> attributes to keep the image
+        smaller. Put whatever values you want for now.
       </p>
+      <p class="note"><strong>Note:</strong> Always add an <code>alt</code> attribute value to increase accessibility
+        for
+        users of your website.</p>
 
 
 
