feat: various updates to styling and semantic

--- a/blog.html
+++ b/blog.html
@@ -9,20 +9,18 @@
 
   <body>
     <nav class="navbar">
-      <div class="container">
-        <h1 class="logo"><a href="index.html">personal website</a></h1>
-        <ul class="nav-list">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
+      <h1 class="logo"><a href="index.html">personal website</a></h1>
+      <ul class="nav-list">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
 
     <main class="main">
-      <div class="content"></div>
+      <h1 class="page-title">blog</h1>
     </main>
 
     <footer class="footer">
