--- a/index.html
+++ b/index.html
@@ -9,55 +9,51 @@
 
   <body>
     <nav class="navbar">
-      <div class="container">
-        <h1 class="logo"><a href="index.html">personal website</a></h1>
-        <ul class="nav-list">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
+      <h1 class="logo"><a href="index.html">personal website</a></h1>
+      <ul class="nav-list">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
 
     <main class="main">
-        <div class="content">
-          <h1 class="page-title">hello world!</h1>
-          <div class="about">
-            <div class="about-image">
-              <img src="sky.jpg" alt="Your Name" />
-            </div>
-            <div class="about-text">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
-                aliquam urna at bibendum. Integer eget dui suscipit, molestie
-                tortor nec, malesuada odio.
-              </p>
-              <p>
-                Fusce quis lorem et augue aliquet tempus ut sit amet ligula. In
-                hac habitasse platea dictumst. Proin eget sapien ut ipsum sagittis
-                commodo. Vivamus et odio vel tortor fermentum consectetur ut a
-                libero.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
-                aliquam urna at bibendum. Integer eget dui suscipit, molestie
-                tortor nec, malesuada odio.
-              </p>
-              <p>
-                Fusce quis lorem et augue aliquet tempus ut sit amet ligula. In
-                hac habitasse platea dictumst. Proin eget sapien ut ipsum sagittis
-                commodo. Vivamus et odio vel tortor fermentum consectetur ut a
-                libero.
-              </p>
-            </div>
-          </div>
+      <h1 class="page-title">hello world!</h1>
+      <div class="about">
+        <div class="about-image">
+          <img src="sky.jpg" alt="Your Name" />
         </div>
-      </main>
+        <div class="about-text">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+            aliquam urna at bibendum. Integer eget dui suscipit, molestie tortor
+            nec, malesuada odio.
+          </p>
+          <p>
+            Fusce quis lorem et augue aliquet tempus ut sit amet ligula. In hac
+            habitasse platea dictumst. Proin eget sapien ut ipsum sagittis
+            commodo. Vivamus et odio vel tortor fermentum consectetur ut a
+            libero.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+            aliquam urna at bibendum. Integer eget dui suscipit, molestie tortor
+            nec, malesuada odio.
+          </p>
+          <p>
+            Fusce quis lorem et augue aliquet tempus ut sit amet ligula. In hac
+            habitasse platea dictumst. Proin eget sapien ut ipsum sagittis
+            commodo. Vivamus et odio vel tortor fermentum consectetur ut a
+            libero.
+          </p>
+        </div>
+      </div>
+    </main>
 
     <footer class="footer">
-        &copy; 2023 My Personal Website | All Rights Reserved
+      &copy; 2023 My Personal Website | All Rights Reserved
     </footer>
   </body>
 </html>
