--- a/contact.html
+++ b/contact.html
@@ -9,34 +9,36 @@
 
   <body>
     <nav class="navbar">
-      <div class="container">
-        <h1 class="logo"><a href="index.html">personal website</a></h1>
-        <ul class="nav-list">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
+      <h1 class="logo"><a href="index.html">personal website</a></h1>
+      <ul class="nav-list">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
 
     <main class="main">
-      <div class="content">
-        <h1 class="page-title">contact me</h1>
-        <form id="contact-form">
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required />
+      <h1 class="page-title">contact me</h1>
+      <form id="contact-form">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required />
 
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
 
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" rows="10" cols="10" required></textarea>
+        <label for="message">Message:</label>
+        <textarea
+          id="message"
+          name="message"
+          rows="10"
+          cols="10"
+          required
+        ></textarea>
 
-          <a href="mailto:your@email.com" class="button">Send Message</a>
-        </form>
-      </div>
+        <a href="mailto:your@email.com" class="button">Submit</a>
+      </form>
     </main>
 
     <footer class="footer">
