--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,6 @@
 
   <body>
     <nav class="navbar">
-      <div class="container">
         <h1 class="logo"><a href="index.html">personal website</a></h1>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
@@ -18,18 +17,16 @@
           <li><a href="resume.html">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-      </div>
     </nav>
 
     <main class="main">
-      <div class="content">
         <h1 class="page-title">portfolio</h1>
         <div class="project">
             <a class="item-link" href="index.html">
               <img class="project-image" src="sky.jpg" alt="">
             </a>
             <div class="project-details">
-              <strong class="project-name">Personal Website</strong>
+              <p class="project-name">Personal Website</p>
               <p class="project-description">Description of project</p>
               <a href="index.html">LEARN MORE</a>
             </div>
@@ -40,7 +37,7 @@
               <img class="project-image" src="sky.jpg" alt="">
             </a>
             <div class="project-details">
-                <strong class="project-name">Personal Website</strong>
+                <p class="project-name">Personal Website</p>
                 <p class="project-description">Description of project</p>
                 <a href="index.html">LEARN MORE</a>
             </div>
@@ -48,7 +45,6 @@
         </div>
 
         <!-- Add more portfolio items as needed -->
-      </div>
     </main>
 
     <footer class="footer">
