feat: new labs and references

--- a/lab_021.html
+++ b/lab_021.html
@@ -91,7 +91,7 @@
           "Awards", "Interests", "References"
         </li>
         <p class="note"><strong>Note:</strong> It's recommended you have "Education",
-          "Experience", "Skills", "Projects", and "Coursework". If you want to have other categories of your resume,
+          "Coursework", "Skills", "Projects", and "Experience". If you want to have other categories of your resume,
           simply add more of the <code class="language-html">&lt;section&gt;</code>, heading, and all!</p>
       </ul>
       <h2>Update Your Portfolio</h2>
