--- a/lab_022.html
+++ b/lab_022.html
@@ -124,8 +124,8 @@
         <source src="assets/2202.mp4" type="video/mp4">
       </video>
       <p>Our image is <em>way</em> too big, but we can change it to fit better once we learn CSS. For now let's put a
-        width and height on our image using the <code>width</code> and <code>height</code> attributes to keep the image
-        smaller. Put whatever values you want for now.
+        width and/or height on our image using the <code>width</code> and <code>height</code> attributes to keep the image
+        smaller. 
       </p>
       <p class="note"><strong>Note:</strong> Always add an <code>alt</code> attribute value to increase accessibility
         for
