--- a/lab_023.html
+++ b/lab_023.html
@@ -45,17 +45,17 @@
       <ul>
         <li>Learn about tables and forms in HTML</li>
         <li>
-          Add an <code class="language-html">&lt;form&gt;</code> to your personal website
+          Add a <code class="language-html">&lt;form&gt;</code> to your personal website
         </li>
       </ul>
       <h2>Tables</h2>
       <p>In the early days of the Internet, tables were
-        used to layout the pages, but now that we can use CSS, tables are mainly for displaying tabular data.
+        used to layout the pages. Now that we can use CSS, tables are mainly for displaying tabular data.
         Imagine an Excel or Google Sheets table and the kind of information you would display there.
         Tables have a <strong>table</strong> definition, <strong>table row</strong>, and <strong>table data</strong>
         cells. Respectively, these are <code class="language-html">&lt;table&gt;</code>, <code
           class="language-html">&lt;tr&gt;</code>, and <code class="language-html">&lt;td&gt;</code>.</p>
-      <p>The following is the structure for a 3 x 4 table. It defines the table, gives it 4 table rows each of which
+      <p>The following is the structure for a 3 x 4 table. It defines the table and gives it 4 table rows each of which
         have 3 table data cells.</p>
       <h3 class="file-heading"><em>table.html</em></h3>
       <div class="side-by-side-container">
