--- a/lab_025.html
+++ b/lab_025.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab  - Git
+    Lab 25  - Semantic HTML
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -16,7 +16,7 @@
   <link href="css/prism.css" rel="stylesheet" />
 </head>
 
-<body data-lab-id="">
+<body data-lab-id="25">
   <a class="skip-to-content" href="#content" tabindex="1">
     Skip to content
   </a>
@@ -37,14 +37,16 @@
     </nav>
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
-        <em>Lab </em>
-        Git
+        <em>Lab 25</em>
+        Semantic HTML
       </h1>
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn about <code>Git</code></li>
+        <li>Review the takeaways of semantic HTML</li>
       </ul>
+      <h2>Structure, not Style</h2>
+      <p></p>
 
 
     </div>
