--- a/prism/html/2302.html
+++ b/prism/html/2302.html
@@ -11,7 +11,7 @@
         <!--This is a comment in HTML. It lets you write text that
         won't be rendered in the webpage.-->
         <label for="name">Name</label>
-        <input type="text" id="name" name="name" placeholder="Name" />
+        <input type="text" id="name" name="name" placeholder="Name" required />
         <br><br>
         <!--The "for" attribute references the "name" attribute in <input>.
         The "name" attribute is necessary once we start tying in JavaScript-->
@@ -33,6 +33,7 @@
           id="comments"
           name="comments"
           placeholder="Comments"
+          required
         ></textarea>
         <br><br>
         <input type="submit" value="Submit" />
