feat: more html references and tweaks

--- a/prism/html/1901.html
+++ b/prism/html/1901.html
@@ -9,6 +9,6 @@
       Hello World! This is my website. 
       This is a sentence.
     </main>
-    <footer></footer>
+    <footer>© 2023 My Personal Website | All Rights Reserved | Made with love ♥</footer>
   </body>
 </html>
