--- a/prism/html/1902.html
+++ b/prism/html/1902.html
@@ -9,6 +9,6 @@
       <p>Hello World! This is my website.</p>
       <p>This is a sentence.</p>
     </main>
-    <footer></footer>
+    <footer>© 2023 My Personal Website | All Rights Reserved | Made with love ♥</footer>
   </body>
 </html>
