feat: more labs added

--- a/lab_015.html
+++ b/lab_015.html
@@ -62,7 +62,7 @@
       <pre class="file"><code class="language-html">Hello World! This is my website.</code></pre>
       <h2>View Your HTML</h2>
       <video class="video" controls>
-        <source src="assets/open.mp4" type="video/mp4">
+        <source src="assets/1501.mp4" type="video/mp4">
       </video>
       <p>To see your spiffy new website, open a browser and type in the file path of your file. For
         example: <code>/Users/hack4impact/hack4impact-calpoly.github.io/index.html</code> on macOs.</p>
