--- a/lab_018.html
+++ b/lab_018.html
@@ -94,6 +94,7 @@
         <code class="language-html">&lt;footer&gt;</code> to each page's
         <code class="language-html">&lt;body&gt;</code> the same way you did for <code>index.html</code>
       </li>
+      <li>In every <code class="language-html">&lt;footer&gt;</code>, put the following text: "© 2023 &lt;Personal Website Name&gt; | All Rights Reserved | Made with love ♥"</li>
       <p class="note"><strong>Note:</strong> All these tags have an opening and a closing tag. Also, your
         <code class="language-html">&lt;body&gt;</code> tag should still enclose everything.
       </p>
