--- a/lab_025.html
+++ b/lab_025.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab 25  - Semantic HTML
+    Lab 25 - Semantic HTML
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -44,10 +44,33 @@
       <h2>Goals</h2>
       <ul>
         <li>Review the takeaways of semantic HTML</li>
+        <li>Create your first GitHub repository and host your HTML website</li>
       </ul>
       <h2>Structure, not Style</h2>
+      <p>Now that you've created an entire website in HTML, the <em>key idea</em> you should remember is that HTML
+        should not be used just to make pages look a certain way, but to also reinforce their <strong>meaning</strong>
+        or
+        <strong>semantics</strong>. Whenever possible, use tags that make logical sense and that provide a richer,
+        clearer idea of what the role of certain components or content are.
+      </p>
+      <p>You could accomplish all same things as <code class="language-html">&lt;header&gt;</code> , <code
+          class="language-html">&lt;nav&gt;</code> , <code class="language-html">&lt;body&gt;</code> and <code
+          class="language-html">&lt;footer&gt;</code> with just <code class="language-html">&lt;div&gt;</code>, but it
+        would be a less meaningful and more confusing structure to understand.</p>
+      <p>Used correctly, semantic HTML webpages are understandable solely from their HTML structure,
+        improving accessibility. <em>And</em> they are more share-able and search-able across many different
+        platforms, increasing discover-ability and their impact.
+      </p>
+      <h2>GitHub Repository</h2>
+      <p>Speaking of discover-ability, so far you have been working and accessing your page on your own browser and
+        local system. However, the whole point of a website is for people to visit it. You also have a log
+        of your coding history in your local <code>Git</code> repository. Local repositories are hard to access on other
+        computers and susceptible to disappearing forever if your computer dies.</p>
+      <p>It's time to connect your <em>local repositoyr</em> to a <strong>remote repository</strong> on GitHub. This
+        will serve the dual purpose of hosting your local repository in more resilient servers and also make use of a
+        GitHub feature called <strong>GitHub pages</strong> which lets you host your own website for free!</p>
+      <h2>Make a Remote Repository</h2>
       <p></p>
-
 
     </div>
   </main>
