--- a/lab_04.html
+++ b/lab_04.html
@@ -71,6 +71,30 @@
         <li>Click on the <i>Prettier - Code formatter</i> extension to see its details.</li>
         <li>Click the blue <strong>Install</strong> button to install the Prettier extension.</li>
       </ol>
+      <h2>Setup Prettier</h2>
+      <p>There's a little bit of setup to make sure that Prettier works as our formatter.</p>
+      <video class="video" controls>
+        <source src="assets/0402.mp4" type="video/mp4">
+      </video>
+      <ol>
+        <li>Click the <strong>Settings</strong> <em>gear</em> in the lower-left of the screen</li>
+        <li>Search for "Formatter" in the search bar</li>
+        <li>Under the select menu for <strong>Default Formatter</strong>, choose <em>Prettier - Code formatter</em></li>
+        <li>Check the box that says <strong>Format on Save</strong>. This will apply formatting whenever you save a
+          file.</li>
+      </ol>
+      <h2>Setup Autosave</h2>
+      <p>If you've ever closed a Word assignment without saving, then you know the pain of not having autosave.
+        Fortunately for us, VSCode comes with autosave. Unfortunately, it's disabled by default. Let's turn it on.</p>
+      <video class="video" controls>
+        <source src="assets/0403.mp4" type="video/mp4">
+      </video>
+      <ol>
+        <li>Click the <strong>Settings</strong> <em>gear</em> in the lower-left of the screen</li>
+        <li>Search for "Auto Save" in the search bar</li>
+        <li>Under the select menu for <strong>Auto Save</strong>, choose <em>afterDelay</em>. This will automatically
+          save your file after the delay time under <strong>Auto Save Delay</strong>. The default is 1000ms.</li>
+      </ol>
 
     </div>
   </main>
