--- a/lab_05.html
+++ b/lab_05.html
@@ -59,9 +59,9 @@
         projects that use Git. Although used together, they are not owned together.</p>
       <p>Check if you already have <code>Git</code> installed. Open your CLI (Powershell for Windows. Terminal for
         Unix/Mac.) and enter the following:</p>
-      <h3><b>Execute:</b></h3>
+      <h3><b>Execute</b></h3>
       <pre class="command-line" data-prompt="$"><code class="language-git">git --version</code></pre>
-      <h3><b>Output:</b></h3>
+      <h3><b>Output</b></h3>
       <pre class="command-line" data-prompt="$" data-filter-output="(out)"><code class="language-git">git --version
 (out)git version 2.42.0</code></pre>
       <p>If you don't see the expected output or similar, download and install <code>Git</code> from here: <a
