--- a/lab_08.html
+++ b/lab_08.html
@@ -55,7 +55,7 @@
         <code>Git</code> we will be using the CLI.
       </p>
       <video controls class="video">
-        <source src="assets/folder.mp4" type="video/mp4">
+        <source src="assets/0801.mp4" type="video/mp4">
       </video>
       <ol>
         <li>Open Visual Studio Code.</li>
@@ -72,7 +72,7 @@
       <p>This will be start of your personal website! We'll go over the details of HTML and CSS later, but for now let's
         create a file to hold some information about your website.</p>
       <video controls class="video">
-        <source src="assets/file.mp4" type="video/mp4">
+        <source src="assets/0802.mp4" type="video/mp4">
       </video>
 
       <ol>
